# Notion-fast-api-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/application/: dto.py
app/application/use_cases/: pages.py  users.py  workspaces.py
app/core/: config.py  deps.py  errors.py
app/domain/: entities.py  repositories.py  services.py
app/entrypoints/api/: main.py
app/entrypoints/api/routers/: pages.py  users.py  workspaces.py
app/infrastructure/db/: base.py  models.py  repositories.py  uow.py
app/infrastructure/files/: local.py
app/infrastructure/security/: auth.py
app/pages/: repository.py  router.py  schemas.py  services.py
app/users/: repository.py  router.py  schemas.py  services.py
app/workspaces/: repository.py  router.py  schemas.py  services.py
migrations/: README  env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  test_auth_flow.py
