[tool.poetry]
name = "notion-fast-api-backend"
version = "0.1.0"
description = "Backend for a Notion-like app using FastAPI"
authors = ["AldoRoman"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
udantic = "^2.0.0"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.0"
alembic = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
