
# ===========================
# pyproject.toml
# ===========================
[project]
name = "notion-local-api"
version = "0.1.0"
description = "Hexagonal FastAPI backend for a Notion-like app (Yoopta content)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "passlib[bcrypt]>=1.7",
]

[tool.alembic]
# let Alembic find app.infrastructure.db.base:Base
script_location = "migrations"
