
# ===========================
# pyproject.toml
# ===========================
[project]
name = "notion-local-api"
version = "0.1.0"
description = "Hexagonal FastAPI backend for a Notion-like app (Yoopta content)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "email-validator>=2.1",
  "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.alembic]
# let Alembic find app.infrastructure.db.base:Base
script_location = "migrations"
